--- a/week4.html
+++ b/week4.html
@@ -83,7 +83,7 @@
       ></Product-Modal>
       <Delete-Modal
       :temp-product="tempProduct"
-        :delete-product="deleteProduct"
+      :del-product="delProduct"
         ref="delModal"
       ></Delete-Modal>
      
